# idd-dev

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  TEST_COVERAGE_REPORT.md  cobertura.xml  justfile  lcov.info  opencode.json  rustqual.toml  tarpaulin-report.html  tarpaulin-report.json  tarpaulin-report.md
.cargo/: config.toml
.fir/: config.toml
.fir/archive/2026/04/: FIR-1.md  FIR-2.md  FIR-3.md  FIR-5.md  FIR-7.md  FIR-8.md
.fir/features/: FIR-1.md  FIR-2.md  FIR-3.md  FIR-4.md  FIR-5.md  FIR-6.md  FIR-9.md
.opencode/skills/idd-mcp-access/: SKILL.md
.sisyphus/: ralph-loop.local.md
docs/: idd-product-structure.md  testing-strategy.md
nix/modules/: devshell.nix  rust.nix
